--- a/Bootstrap4\conFusion/index.html
+++ b/Bootstrap4\conFusion/index.html
@@ -43,7 +43,14 @@
                         creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col col-sm align-self-center">
-                    <img src="img/logo.png" class="img-fluid">
+                    <div class="row align-items-center">
+                        <div class="col-sm-6">
+                            <img src="img/logo.png" class="img-fluid">
+                        </div>
+                        <div class="col-sm-6">
+                            <a type="button" class="btn btn-sm btn-warning" href="#reserve">Reseve Table</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -72,10 +79,15 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="hidden-xs-down">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six
-                    main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per
-                    person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="hidden-xs-down">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six
+                            main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per
+                            person </p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Promotion">
+                </div>
             </div>
         </div>
 
@@ -97,7 +109,71 @@
                 </div>
             </div>
         </div>
+
+        <div class="row row-content align-items-center">
+            <div class="col-sm-8 offset-sm-2">
+                <div class="card" id="reserve">
+                    <h3 class="card-header bg-warning text-white">Reseve a Table</h3>
+                    <div class="card-block">
+                        <form>
+                            <div class="form-group row">
+                                <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
+                                <div class="col-sm-1">
+                                    <input type="radio" id="guestsChoice1" name="guests" value="1">
+                                    <label for="guestsChoice1">1   </label>
+                                </div>
+                                <div class="col-sm-1">
+                                    <input type="radio" id="guestsChoice2" name="guests" value="2">
+                                    <label for="guestsChoice2">2   </label>
+                                </div>
+                                <div class="col-sm-1">
+                                    <input type="radio" id="guestsChoice3" name="guests" value="3">
+                                    <label for="guestsChoice3">3   </label>
+                                </div>
+                                <div class="col-sm-1">
+                                    <input type="radio" id="guestsChoice4" name="guests" value="4">
+                                    <label for="guestsChoice4">4   </label>
+                                </div>
+                                <div class="col-sm-1">
+                                    <input type="radio" id="guestsChoice5" name="guests" value="5">
+                                    <label for="guestsChoice5">5   </label>
+                                </div>
+                                <div class="col-sm-1">
+                                    <input type="radio" id="guestsChoice6" name="guests" value="6">
+                                    <label for="guestsChoice6">6</label>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="dateandtime" class="col-md-2 col-form-label">Date and Time</label>
+                                <div class="col-5">
+                                    <div class="input-group">
+                                        <div class="input-group-addon">
+                                            <span class="fa fa-calendar"></span>
+                                        </div>
+                                        <input type="date" class="form-control" id="date" name="date" placeholder="Date" />
+                                    </div>
+                                </div>
+                                <div class="col-5">
+                                    <div class="input-group">
+                                        <div class="input-group-addon">
+                                            <span class="fa fa-clock-o"></span>
+                                        </div>
+                                        <input type="time" class="form-control" id="time" name="time" placeholder="Time" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-md-2 col-md-10">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
 
     <footer class="footer">
         <div class="container">
