--- a/Bootstrap4\conFusion/index.html
+++ b/Bootstrap4\conFusion/index.html
@@ -33,41 +33,41 @@
                 <span class="navbar-text">
                         <a data-toggle="modal" data-target="#loginModal">
                         <span class="fa fa-sign-in"></span> Login</a>
-                    </span>
+                </span>
             </div>
         </div>
     </nav>
 
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">Login </h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-            </div>
-            <div class="modal-body">
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label class="sr-only" for="exampleInputEmail3">Email address</label>
-                        <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
-                    </div>
-                    <div class="form-group">
-                        <label class="sr-only" for="exampleInputPassword3">Password</label>
-                        <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
-                    </div>
-                    <div class="form-check">
-                        <label class="form-check-label">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form class="form-inline">
+                        <div class="form-group">
+                            <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                            <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="exampleInputPassword3">Password</label>
+                            <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
                             <input class="form-check-input" type="checkbox"> Remember me
                         </label>
-                    </div>
-                </form>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary btn-sm">Sign in</button>
+                </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn btn-primary btn-sm">Sign in</button>
-            </div>
-        </div>
         </div>
     </div>
 
@@ -83,13 +83,62 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3">
-                        <a type="button" class="btn btn-warning btn-sm btn-block"
-                        data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                         data-placement="bottom" href="#reserveform">Reseve Table</a>
+                    <a type="button" class="btn btn-warning btn-sm btn-block" data-toggle="tooltip" data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>"
+                        data-placement="bottom" href="#reserveform">Reseve Table</a>
                 </div>
             </div>
         </div>
     </header>
+
+    <div class="row row-content">
+        <div class="col">
+            <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
+                            <p class="hidden-xs-down">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives,
+                                ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="img/buffet.png" alt="Promotion">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                            <p class="hidden-xs-down">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
+                                six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for
+                                just $19.99 per person </p>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="img/alberto.png" alt="Alberto Somayya">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Alberto Somayya</h2>
+                            <p class="hidden-xs-down">Award winning three-star Michelin chef with wide International experience having worked closely
+                                with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian
+                                fusion experiences.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <ol class="carousel-indicators">
+                    <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#mycarousel" data-slide-to="1"></li>
+                    <li data-target="#mycarousel" data-slide-to="2"></li>
+                </ol>
+                <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+                <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </a>
+            </div>
+        </div>
+    </div>
+
 
     <div class="container">
         <div class="row row-content align-items-center">
@@ -117,9 +166,9 @@
                 <div class="media">
                     <div class="media-body">
                         <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
-                        <p class="hidden-xs-down">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six
-                            main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per
-                            person </p>
+                        <p class="hidden-xs-down">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
+                            six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
+                            $19.99 per person </p>
                     </div>
                     <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Promotion">
                 </div>
@@ -183,16 +232,16 @@
                                 <div class="col-sm-4 has-feedback">
                                     <div class="input-group">
                                         <span class="input-group-addon fa fa-calendar" aria-hidden="true"></span>
-                                        <input type="text" class="form-control" id="date" placeholder="Date"/>
+                                        <input type="text" class="form-control" id="date" placeholder="Date" />
                                     </div>
                                 </div>
                                 <div class="col-sm-4 has-feedback">
                                     <div class="input-group">
                                         <span class="input-group-addon fa fa-clock-o" aria-hidden="true"></span>
-                                        <input type="text" class="form-control" id="time" placeholder="Time"/>
+                                        <input type="text" class="form-control" id="time" placeholder="Time" />
                                     </div>
                                 </div>
-    
+
                             </div>
                             <div class="form-group row">
                                 <div class="offset-md-2 col-md-10">
@@ -249,9 +298,9 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script>
-        $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip();
-            });
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
     </script>
 </body>
 
