--- a/Bootstrap4\conFusion/index.html
+++ b/Bootstrap4\conFusion/index.html
@@ -83,8 +83,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3">
-                    <a type="button" class="btn btn-warning btn-sm btn-block" data-toggle="tooltip" data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reserveform">Reseve Table</a>
+                    <a type="button" class="btn btn-warning btn-sm btn-block" data-toggle="modal" data-target="#reserveModal">Reseve Table</a>
                 </div>
             </div>
         </div>
@@ -157,7 +156,6 @@
             </div>
         </div>
 
-
         <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
@@ -194,65 +192,82 @@
             </div>
         </div>
 
-        <div class="row row-content align-items-center">
-            <div class="col-sm-8 offset-sm-2">
-                <div class="card" id="reserve">
-                    <h3 class="card-header bg-warning text-white">Reseve a Table</h3>
-                    <div class="card-block">
-                        <form>
-                            <div class="form-group row">
-                                <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
-                                <div class="col-sm-1">
-                                    <input type="radio" id="guestsChoice1" name="guests" value="1">
-                                    <label for="guestsChoice1">1   </label>
-                                </div>
-                                <div class="col-sm-1">
-                                    <input type="radio" id="guestsChoice2" name="guests" value="2">
-                                    <label for="guestsChoice2">2   </label>
-                                </div>
-                                <div class="col-sm-1">
-                                    <input type="radio" id="guestsChoice3" name="guests" value="3">
-                                    <label for="guestsChoice3">3   </label>
-                                </div>
-                                <div class="col-sm-1">
-                                    <input type="radio" id="guestsChoice4" name="guests" value="4">
-                                    <label for="guestsChoice4">4   </label>
-                                </div>
-                                <div class="col-sm-1">
-                                    <input type="radio" id="guestsChoice5" name="guests" value="5">
-                                    <label for="guestsChoice5">5   </label>
-                                </div>
-                                <div class="col-sm-1">
-                                    <input type="radio" id="guestsChoice6" name="guests" value="6">
-                                    <label for="guestsChoice6">6</label>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="datetime" class="col-sm-3 control-label">Date and Time</label>
-                                <div class="col-sm-4 has-feedback">
-                                    <div class="input-group">
-                                        <span class="input-group-addon fa fa-calendar" aria-hidden="true"></span>
-                                        <input type="text" class="form-control" id="date" placeholder="Date" />
+        <div id="reserveModal" class="modal fade" role="dialog">
+                <div class="modal-dialog modal-lg" role="content">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Reserve a Table </h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                                <form>
+                                    <div class="form-group row">
+                                        <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
+                                        <div class="col-sm-1">
+                                            <input type="radio" id="guestsChoice1" name="guests" value="1">
+                                            <label for="guestsChoice1">1   </label>
+                                        </div>
+                                        <div class="col-sm-1">
+                                            <input type="radio" id="guestsChoice2" name="guests" value="2">
+                                            <label for="guestsChoice2">2   </label>
+                                        </div>
+                                        <div class="col-sm-1">
+                                            <input type="radio" id="guestsChoice3" name="guests" value="3">
+                                            <label for="guestsChoice3">3   </label>
+                                        </div>
+                                        <div class="col-sm-1">
+                                            <input type="radio" id="guestsChoice4" name="guests" value="4">
+                                            <label for="guestsChoice4">4   </label>
+                                        </div>
+                                        <div class="col-sm-1">
+                                            <input type="radio" id="guestsChoice5" name="guests" value="5">
+                                            <label for="guestsChoice5">5   </label>
+                                        </div>
+                                        <div class="col-sm-1">
+                                            <input type="radio" id="guestsChoice6" name="guests" value="6">
+                                            <label for="guestsChoice6">6</label>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-sm-4 has-feedback">
-                                    <div class="input-group">
-                                        <span class="input-group-addon fa fa-clock-o" aria-hidden="true"></span>
-                                        <input type="text" class="form-control" id="time" placeholder="Time" />
+                                    <div class="form-group row">
+                                        <label for="section" class="col-sm-3 control-label">Section</label>
+                                        <div class="col-sm-9 has-feedback">
+                                            <div class="btn-group" data-toggle="buttons">
+                                                <label class="btn btn-success active">
+                                                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
+                                                </label>
+                                                <label class="btn btn-danger">
+                                                    <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                                </label>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-
-                            </div>
-                            <div class="form-group row">
-                                <div class="offset-md-2 col-md-10">
-                                    <button type="submit" class="btn btn-primary">Reserve</button>
-                                </div>
-                            </div>
-                        </form>
+                                    <div class="form-group row">
+                                        <label for="datetime" class="col-sm-3 control-label">Date and Time</label>
+                                        <div class="col-sm-4 has-feedback">
+                                            <div class="input-group">
+                                                <span class="input-group-addon fa fa-calendar" aria-hidden="true"></span>
+                                                <input type="text" class="form-control" id="date" placeholder="Date" />
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4 has-feedback">
+                                            <div class="input-group">
+                                                <span class="input-group-addon fa fa-clock-o" aria-hidden="true"></span>
+                                                <input type="text" class="form-control" id="time" placeholder="Time" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm">Reserve</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+
+
     </div>
 
 
@@ -296,12 +311,6 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <script>
-        $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 </body>
 
 </html>
