--- a/Bootstrap4\conFusion/index.html
+++ b/Bootstrap4\conFusion/index.html
@@ -33,7 +33,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                        <a data-toggle="modal" data-target="#loginModal">
+                        <a id="btnLoginModal">
                         <span class="fa fa-sign-in"></span> Login</a>
                 </span>
             </div>
@@ -85,7 +85,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3">
-                    <a type="button" class="btn btn-warning btn-sm btn-block" data-toggle="modal" data-target="#reserveModal">Reseve Table</a>
+                    <a type="button" class="btn btn-warning btn-sm btn-block" id="btnReserveModal">Reseve Table</a>
                 </div>
             </div>
         </div>
@@ -146,8 +146,6 @@
                 </div>
             </div>
         </div>
-        
-            
 
         <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3 flex-last">
