--- a/Ionic\conFusion/src/pages/dishdetail/dishdetail.html
+++ b/Ionic\conFusion/src/pages/dishdetail/dishdetail.html
@@ -2,6 +2,11 @@
 
   <ion-navbar color="primary">
     <ion-title>Dish Details</ion-title>
+    <ion-buttons start>
+      <button ion-button (click)="showActions()">
+         <ion-icon name="md-more"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
