--- a/Ionic\conFusion/src/index.html
+++ b/Ionic\conFusion/src/index.html
@@ -40,6 +40,7 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
+  <script type="text/javascript" src="cordova.js"></script>
 
 </body>
 </html>
